Jan 21 2000 -	The Publisher handler __auth__ can now be a dictionary or.
		a const. There is also new __access__, which can be a list.

Jan 19 2000 -	Added req._content_type_set flag which is set to 1 when
		a value is assigned to content_type from Python. This way
		the publisher handler can know if it's been purposely set
		and will not attempt to guess it.

Jan 18 2000 -	Documented req.form. Fixed a security problem with the
		Publisher handler - it now does not allow modules to be
		published, so a user can't access test.os.renames, etc.

Dec 18 2000 -	2.7 had a typo in it + win32 wants types initialized
		separately like I thought. Time for 2.7.1.

Dec 16 2000 -	Releasing 2.7....

Dec 16 2000 -   Found another bug related to ALLOW_THREADS macros which are
		noops without threads, but that is actually wrong, because
		what they is needed wvwn without threads. Also, some days
		ago 2.6.4 was released.

Dec 13 2000 -	The initial documentation for the util module and for the
		publisher handler is done. Perhaps the tutorial should have
		a bit on the publisher handler.

Dec 12 2000 - 	publisher handler appears to be working pretty well. Now need
		to document it.

Dec 11 2000 -	It appears I found a big booboo with mispalced #ifdef
		WITH_THREADS... The "Dispatch returned nothing" should be
		gone now. This means 2.6.3 has major problems with multiple
		interpreters.

Dec  8 2000 -   connection.user now writable. More Doc improvements.

Dec  6 2000 -	The COPYRIGHT no longer has the advertizing clause.

Dec  4 2000 -	Initial (not proof-read) LaTeX source for documentation is 
		checked in.

Nov 26 2000 -	Dilligently migrating all the documentation to LaTeX using the
		Python standards. 

Nov 17 2000 -	I forgot to uncomment type initialization. type(req.headers_in)
		would segfault. Fixed. Continuing work on publisher.py module.

Nov 08 2000 -	read() and reqadline() now behave very much like the standard
		Python file object counterparts. Added James Gessling's VMS